--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,15 @@
 		<groupId>org.apache.maven.plugins</groupId>
 		<version>3.0</version>
     </plugin>
+	   <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.7.0</version>
+    <configuration>
+        <source>1.8</source>
+        <target>1.8</target>
+    </configuration>
+</plugin>
     <plugin>	
 		<artifactId>maven-surefire-plugin</artifactId>
 		<groupId>org.apache.maven.plugins</groupId>
